# apple-mail-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/apple_mail_mcp/: __init__.py  exceptions.py  mail_connector.py  security.py  server.py  utils.py
tests/unit/: test_mail_connector.py  test_message_management.py  test_reply_forward.py  test_server_send_confirmation.py
